Changes in rmd presentation file and help file

--- a/Air_Quality_Prediction_Presentation.html
+++ b/Air_Quality_Prediction_Presentation.html
@@ -175,7 +175,7 @@ slide:not(.current) .plotly.html-widget{
           </hgroup>
   </slide>
 
-<slide class=""><hgroup><h2>Synopsis</h2></hgroup><article  id="synopsis">
+<slide class=""><hgroup><h2>Summary</h2></hgroup><article  id="summary">
 
 <p><font size="4"></p>
 
@@ -302,7 +302,8 @@ predict(mdl3, newdata=data.frame(Wind = wnd))</pre>
 <ul>
 <li>The built-in dataset contains only 153 observations.</li>
 <li>Once the relationship between these variables is established using the Linear Regression Model, these models can be used to determine the values of Ozone for the unknown inputs</li>
-<li>There exists a negative correlation between &lsquo;Ozone&rsquo; and &lsquo;Temperature&rsquo;. Hence once the value of Wind Speed increases, Ozone increases and vice-versa. There exists a negative correlation between &lsquo;Ozone&rsquo; and &lsquo;Solar Radiation&rsquo;. Hence once the value of Wind Speed increases, Ozone increases and vice-versa.</li>
+<li>There exists a positive correlation between &lsquo;Ozone&rsquo; and &lsquo;Temperature&rsquo;. Hence once the value of Wind Speed increases, Ozone increases and when the Temperature decreases, Ozone value decreases.</li>
+<li>There exists a positive correlation between &lsquo;Ozone&rsquo; and &lsquo;Solar Radiation&rsquo;. Hence once the value of Wind Speed increases, Ozone increases and vice-versa.</li>
 <li>There exists a negative correlation between &lsquo;Ozone&rsquo; and &lsquo;Wind Speed&rsquo;. Hence once the value of Wind Speed increases, Ozone decreases and vice-versa.</li>
 </ul>
 
@@ -312,9 +313,16 @@ predict(mdl3, newdata=data.frame(Wind = wnd))</pre>
 
 <p><font size="4"></p>
 
+<p>Below are the links for quick reference:</p>
+
 <ul>
-<li><p>Shiny Web App Link</p></li>
-<li><p>Github Code Link</p></li>
+<li>Shiny Web App Link</li>
+</ul>
+
+<p><a href='https://siddhimk.shinyapps.io/Air_Quality_Prediction/' title=''>https://siddhimk.shinyapps.io/Air_Quality_Prediction/</a></p>
+
+<ul>
+<li>Github Code Link</li>
 </ul>
 
 <p><a href='https://github.com/siddhimk/Coursera_Developing_Data_Products' title=''>https://github.com/siddhimk/Coursera_Developing_Data_Products</a></p>
